<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_book">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingTop="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hikmatlar_xazinasi"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="530dp"
                android:scaleType="fitXY"
                android:src="@drawable/app_info"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/text_info_layout"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/gmail"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/backbutton"
        style="@style/buttonBuckgrondWithBorderless"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12sp"
        android:contentDescription="@string/todo"
        android:elevation="10dp"
        android:src="@drawable/ic_back"
        app:layout_collapseMode="pin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>