<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#5E5A5A"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center|left"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:id="@+id/backbutton"
            style="@style/buttonBuckgrondWithBorderless"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/actionBarText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="64dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xabar"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/actionButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/ochirish"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />
</androidx.constraintlayout.widget.ConstraintLayout>