<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_book">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D000000" />

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center|left"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:id="@+id/backbutton"
            style="@style/buttonBuckgrondWithBorderless"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/actionBarText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/doneButton"
            style="@style/buttonBuckgrondWithBorderless"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_done"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/alisher"
        app:civ_border_color="#F36C60"
        app:civ_border_width="2dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/name_motivator"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hashtagEdittextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditextLayout"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hashtagEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/havola"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/infoEdittextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hashtagEdittextLayout"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/infoEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/nima_haqida"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minLines="5"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>